--- a/p1_git.html
+++ b/p1_git.html
@@ -3,8 +3,11 @@
 <head>
 	<title>IEM</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="../css/p2_git.css" >
+	<script src="../js/p3_git.js"></script>
 </head>
 <body>
 <header>titulo git</header>
+<section>primera seccion</section>
 </body>
 </html> 
